*Wed Dec 1 2010 Henri Gavin <.> 0.20100105
- fixed bug related to linear analysis of temperature loads
- added ascii (ANSI.SYS) color to screen output hpgUtils.c hpgUtils.h
- The Win32 "Command Prompt" does not recognize ANSI.SYS escape sequences at
all.

*Fri Nov 26 2010 Henri Gavin <.> 0.20100105
- updated user-manual.html with Gnuplot links to www.gnuplot.info
and removed links to http://www.duke.edu/~hpgavin/gnuplot.html

*Wed Nov 10 2010 Henri Gavin <.> 0.20100105
- improve comments and documentation on the '-e' command line flag

*Tue Nov  9 2010 Henri Gavin <.> 0.20100105
- added program name, description, url and author to LICENSE.txt

*Sat Oct 10 2010 Henri Gavin <.> 0.20100105
- fix typo re: local section axes in section 7.6 of manual
- set value of steel density in exA.3dd, exC.3dd, exD.3dd, and exG.3dd to 7.33e-7 k/in^3/g

*Tue Sep  7 2010 Henri Gavin <.> 0.20100105
- bug fix in call to lumped_M (switched beam mass BMs and roll angle p) 

*Wed Aug 12 2010 Henri Gavin <.> 0.20100105
- add wxWidgets link to TODO.txt

*Tue Aug 10 2010 Henri Gavin <.> 0.20100105
- add extra beam mass to element mass matrix prior to coordinate transformation
- better checking of symmetry of consistent mass matrix
- better checking of symmetry of geometric stiffness matrix
- debug option writes all element mass and stiffness matrices to disk

*Mon Aug 09 2010 Henri Gavin <.> 0.20100105
- add plot formatting ... 'set size ratio -1'  for equal XY plot scaling
- improve and simplify plot axis scaling for 3D animations
- add "-z" command line option to force 3D plotting
"-z" forces 3D plotting in Gnuplot
- update documentation regarding -z flag
- change .plt file comment "# M E S H   A N N O T A T I O N   F I L E\n" to
"# G N U P L O T   S C R I P T   F I L E \n"
- re-run examples and tune mesh exageration parameters

*Tue May 18 2010 Henri Gavin <.> 0.20100105
- remove email address from web-pages to cut down on spam

*Wed Mar 10 2010 Henri Gavin <.> 0.20100105